Images endpoints have been implemented, property endpoints are corrected.